--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
-title: lazy-hooman
-description: Automate command line because hoomans are lazy.
+title: lazy-human
+description: Command line automation. Because humans are lazy.
 theme: jekyll-theme-hacker
